--- a/package.json
+++ b/package.json
@@ -12,6 +12,17 @@
   "keywords": [
     "api"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "author": "Okpako Marvis",
   "license": "ISC",
   "dependencies": {
@@ -22,8 +33,10 @@
     "dotenv": "^6.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.16.4",
+    "husky": "^1.3.1",
     "joi": "^13.1.0",
     "jsonwebtoken": "^8.4.0",
+    "lint-staged": "^8.1.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "pg": "^7.7.1",
@@ -40,6 +53,7 @@
     "eslint": "^5.10.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.7",
+    "prettier": "^1.15.3",
     "request": "^2.88.0",
     "should": "^13.2.3",
     "supertest": "^3.3.0"
