--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "babel server -d build --watch",
     "start": "node build/app.js",
     "start:dev": "nodemon build/app.js",
-    "test": " mocha build/test/  --timeout 10000"
+    "test": " mocha build/test/  --timeout 10000",
+    "tables": "babel-node server/db/droptables && babel-node server/db/createtables"
   },
   "keywords": [
     "api"
@@ -26,9 +27,7 @@
   "author": "Okpako Marvis",
   "license": "ISC",
   "dependencies": {
-    "@types/morgan": "^1.7.35",
     "bcrypt": "^3.0.2",
-    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "email-validator": "^2.0.4",
@@ -39,8 +38,7 @@
     "lint-staged": "^8.1.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "pg": "^7.7.1",
-    "pg-promise": "^5.9.7"
+    "pg": "^7.7.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
