--- a/package.json
+++ b/package.json
@@ -5,32 +5,45 @@
   "main": "app.js",
   "scripts": {
     "build": "babel server -d build --watch",
-    "start": "nodemon build/app.js",
-    "test": " mocha build/test/  --timeout 10000 --exit"
+    "start": "npm run tables && node build/app.js",
+    "start:dev": "nodemon build/app.js",
+    "test": " mocha build/test/  --timeout 10000",
+    "tables": "babel-node server/db/droptables && babel-node server/db/createtables"
   },
   "keywords": [
     "api"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "author": "Okpako Marvis",
   "license": "ISC",
   "dependencies": {
-    "@types/morgan": "^1.7.35",
     "bcrypt": "^3.0.2",
-    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.16.4",
+    "husky": "^1.3.1",
     "joi": "^13.1.0",
     "jsonwebtoken": "^8.4.0",
+    "lint-staged": "^8.1.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "pg": "^7.7.1",
-    "pg-promise": "^5.9.7"
+    "pg": "^7.7.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.2.0",
@@ -38,6 +51,7 @@
     "eslint": "^5.10.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.7",
+    "prettier": "^1.15.3",
     "request": "^2.88.0",
     "should": "^13.2.3",
     "supertest": "^3.3.0"
